# sherlock

./: .gitignore  Booting.md  README.md  TODO.md  sherlock.boot
bootloader/: Cargo.toml
bootloader/.cargo/: config
bootloader/src/: asm_routines.asm  lld_undefined.rs  main.rs  mm.rs  panic.rs  print.rs  pxe.rs  realmode.rs  stage0.asm
kernel/: Cargo.toml
kernel/.cargo/: config
kernel/src/: core_locals.rs  main.rs  mm.rs  panic.rs  print.rs
shared/boot_args/: Cargo.toml
shared/boot_args/src/: lib.rs
shared/core_reqs/src/: lib.rs
shared/cpu/src/: lib.rs
shared/lockcell/: Cargo.toml
shared/lockcell/src/: lib.rs
shared/page_table/: Cargo.toml
shared/page_table/src/: lib.rs
shared/parse-pe/: Cargo.toml
shared/parse-pe/src/: lib.rs
shared/rangeset/src/: lib.rs
shared/serial/: Cargo.toml
shared/serial/src/: lib.rs
src/: main.rs
