[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
serial = { path = "../shared/serial" }
cpu = { path = "../shared/cpu" }

[profile.release]
panic = "abort"
lto = "fat"
opt-level = "z"
debug = true

[profile.dev]
panic = "abort"
debug = true
