[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
core_reqs = { path = "../shared/core_reqs" }
serial = { path = "../shared/serial" }
cpu = { path = "../shared/cpu" }
rangeset = { path = "../shared/rangeset" }
lockcell = { path = "../shared/lockcell" }
parse-pe= { path = "../shared/parse-pe" }
page_table = { path = "../shared/page_table" }
boot_args = { path = "../shared/boot_args" }


[profile.release]
panic = "abort"
lto = "fat"
opt-level = "z"
debug = true

[profile.dev]
panic = "abort"
debug = true
