[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_reqs = { path = "../shared/core_reqs" }
serial = { path = "../shared/serial" }
cpu = { path = "../shared/cpu" }

[profile.release]
panic = "abort"
lto="fat"
opt-level = 2
debug = true

[profile.dev]
panic = "abort"
debug = true
